add_subdirectory(cpprog)
add_subdirectory(labo_1)
add_subdirectory(labo_2)
add_subdirectory(labo_3)
add_subdirectory(labo_4)
add_subdirectory(labo_5)
add_subdirectory(labo_6)
add_subdirectory(labo_7)
add_subdirectory(labo_8)
add_subdirectory(labo_9)
add_subdirectory(labo_10)
add_subdirectory(labo_11)
